--- a/src/pages/register/RegisterForm.module.css
+++ b/src/pages/register/RegisterForm.module.css
@@ -1,4 +1,3 @@
 .register-form {
-    max-width: 400px;
-    margin: 30px auto;
+    max-width: 450px;
 }
