--- a/src/pages/signIn/SignInForm.module.css
+++ b/src/pages/signIn/SignInForm.module.css
@@ -1,4 +1,3 @@
 .signin-form {
     width: 400px;
-    margin: 30px auto;
 }
